--- a/Web_Visualizations/Visualizations/cloudiness.html
+++ b/Web_Visualizations/Visualizations/cloudiness.html
@@ -17,8 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Web Visualizations/reset.css">
-    <link rel="stylesheet" href="/Web Visualizations/style.css">
+    <link rel="stylesheet" href="/Web_Visualizations/reset.css">
+    <link rel="stylesheet" href="/Web_Visualizations/style.css">
 
 
 </head>
@@ -27,7 +27,7 @@
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg ">
-        <a class="navbar-brand" href="/Web Visualizations/index.html">Latitude</a>
+        <a class="navbar-brand" href="/Web_Visualizations/index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarColor01"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,20 +39,20 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">Plot</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/max_temp.html">Max
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/max_temp.html">Max
                             Temperature</a>
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/humidity.html">Humidity</a>
                         <a class="dropdown-item"
-                            href="/Web Visualizations/Visualizations/cloudiness.html">Cloudiness</a>
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/windspeed.html">Wind
+                            href="/Web_Visualizations/Visualizations/cloudiness.html">Cloudiness</a>
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/windspeed.html">Wind
                             Speed</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Web Visualizations/comparison.html">Comparison</a>
+                    <a class="nav-link" href="/Web_Visualizations/comparison.html">Comparison</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Web Visualizations/data.html">Data</a>
+                    <a class="nav-link" href="/Web_Visualizations/data.html">Data</a>
                 </li>
             </ul>
         </div>
@@ -82,16 +82,16 @@
                     </div>
                     <div class="col-sm-3 col-md-5 com-img">
                         <h4><b>vs. Humidity</b></h4>
-                        <a href="/Web Visualizations/Visualizations/humidity.html">
-                            <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig2.png"
+                        <a href="/Web_Visualizations/Visualizations/humidity.html">
+                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig2.png"
                                 alt="Humidity" />
                         </a>
                     </div>
 
                     <div class="col-sm-3 col-md-5 com-img">
                         <h4><b>vs. Cloudiness</b></h4>
-                        <a href="/Web Visualizations/Visualizations/cloudiness.html">
-                            <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig3.png"
+                        <a href="/Web_Visualizations/Visualizations/cloudiness.html">
+                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig3.png"
                                 alt="Cloudiness" />
                         </a>
                     </div>
@@ -100,8 +100,8 @@
                         <div class="heading">
                             <h4><b>vs. Wind Speed</b></h4>
                         </div>
-                        <a href="/Web Visualizations/Visualizations/windspeed.html">
-                            <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig4.png"
+                        <a href="/Web_Visualizations/Visualizations/windspeed.html">
+                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig4.png"
                                 alt="Wind Speed" />
                         </a>
                     </div>
