--- a/Web_Visualizations/Visualizations/max_temp.html
+++ b/Web_Visualizations/Visualizations/max_temp.html
@@ -17,15 +17,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Web Visualizations/reset.css">
-    <link rel="stylesheet" href="/Web Visualizations/style.css">
+    <link rel="stylesheet" href="/Web_Visualizations/reset.css">
+    <link rel="stylesheet" href="/Web_Visualizations/style.css">
+
 
 </head>
 
 <body>
+
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg ">
-        <a class="navbar-brand" href="/Web Visualizations/index.html">Latitude</a>
+        <a class="navbar-brand" href="/Web_Visualizations/index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarColor01"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,19 +39,20 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">Plot</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/max_temp.html">Max
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/max_temp.html">Max
                             Temperature</a>
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/humidity.html">Humidity</a>
                         <a class="dropdown-item"
-                            href="/Web Visualizations/Visualizations/cloudiness.html">Cloudiness</a>
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/windspeed.html">Wind Speed</a>
+                            href="/Web_Visualizations/Visualizations/cloudiness.html">Cloudiness</a>
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/windspeed.html">Wind Speed</a>
+                        <a class="dropdown-item" href="/comparison.html">Comparison</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Web Visualizations/comparison.html">Comparison</a>
+                    <a class="nav-link" href="/Web_Visualizations/comparison.html">Comparison</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Web Visualizations/data.html">Data</a>
+                    <a class="nav-link" href="/Web_Visualizations/data.html">Data</a>
                 </li>
             </ul>
         </div>
@@ -57,51 +60,46 @@
 
     <!--End Navbar-->
 
+
+
     <!-- Section to hold images -->
 
     <div class="row background">
-        <div class="col-md-4 col-lg-8 card-padding">
+        <div class="col-md-10 card-padding">
             <div class="section">
-                <h2><b>Latitude Vs Wind Speed</b></h2>
+                <h2><b>Comparison: Latitude vs X</b></h2>
                 <hr />
-                <img class="section-img-top" src="/Web Visualizations/Resources/assets/images/Fig4.png"
-                    alt="Humidity" />
                 <div class="section-body">
                     <p class="section-text">
-                        The plot shows that wind picks up speed as it goes above the equator.
+                        Click any plot to get an in-depth analysis
                     </p>
                 </div>
-            </div>
-        </div>
-
-
-
-        <!-- Create card to hold vizualization images -->
-        <div class="col-md-2 col-lg-4 card-padding">
-            <div class="card">
-                <h4><b>Visualizations</b></h4>
-                <hr />
                 <div class="row">
-                    <div class="col-sm-3 col-md-6">
+                    <div class="col-sm-3 col-md-5 com-img">
+                        <h3><b>vs. Max Temprature</b></h3>
                         <a href="/Web Visualizations/Visualizations/max_temp.html">
                             <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig1.png"
                                 alt="Max Temperature" />
                         </a>
                     </div>
-                    <div class="col-sm-3 col-md-6">
+                    <div class="col-sm-3 col-md-5 com-img">
+                        <h3><b>vs. Humidity</b></h3>
                         <a href="/Web Visualizations/Visualizations/humidity.html">
-                            <img class="img-fluid img-viz" src="/Web Visualizations/Resources/assets/images/Fig2.png"
+                            <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig2.png"
                                 alt="Humidity" />
                         </a>
                     </div>
-                    <div class="col-sm-3 col-md-6">
+
+                    <div class="col-sm-3 col-md-5 com-img">
+                        <h3><b>vs. Cloudiness</b></h3>
                         <a href="/Web Visualizations/Visualizations/cloudiness.html">
                             <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig3.png"
                                 alt="Cloudiness" />
                         </a>
                     </div>
 
-                    <div class="col-sm-3 col-md-6">
+                    <div class="col-sm-3 col-md-5 com-img">
+                        <h3><b>vs. Wind Speed</b></h3>
                         <a href="/Web Visualizations/Visualizations/windspeed.html">
                             <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig4.png"
                                 alt="Wind Speed" />
@@ -110,10 +108,9 @@
                 </div>
             </div>
         </div>
-
+    </div>
 </body>
-<footer>
-    <p>Copyright &copy; Hibo Dahir 2020<br>
-</footer>
+
+
 
 </html>
