--- a/Web_Visualizations/data.html
+++ b/Web_Visualizations/data.html
@@ -18,7 +18,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Web_Visualizations/style.css" />
 
 </head>
 
@@ -26,7 +26,7 @@
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg ">
-        <a class="navbar-brand" href="/Web Visualizations/index.html">Latitude</a>
+        <a class="navbar-brand" href="/Web_Visualizations/index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarColor01"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,19 +38,19 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">Plot</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/max_temp.html">Max
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/max_temp.html">Max
                             Temperature</a>
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/humidity.html">Humidity</a>
                         <a class="dropdown-item"
-                            href="/Web Visualizations/Visualizations/cloudiness.html">Cloudiness</a>
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/windspeed.html">Wind Speed</a>
+                            href="/Web_Visualizations/Visualizations/cloudiness.html">Cloudiness</a>
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/windspeed.html">Wind Speed</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Web Visualizations/Visualizations/comparison.html">Comparison</a>
+                    <a class="nav-link" href="/Web_Visualizations/Visualizations/comparison.html">Comparison</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Web Visualizations/Visualizations/data.html">Data</a>
+                    <a class="nav-link" href="/Web_Visualizations/Visualizations/data.html">Data</a>
                 </li>
             </ul>
         </div>
