--- a/Web_Visualizations/index.html
+++ b/Web_Visualizations/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparison</title>
+    <title>Web Design</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -17,102 +17,117 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Web Visualizations/reset.css">
-    <link rel="stylesheet" href="/Web Visualizations/style.css">
+
+    <link rel="stylesheet" href="/Web_Visualizations/reset.css">
+    <link rel="stylesheet" href="/Web_Visualizations/style.css">
 
 
 </head>
 
 <body>
-
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg ">
-        <a class="navbar-brand" href="/Web Visualizations/index.html">Latitude</a>
+        <a class="navbar-brand" href="/Web_Visualizations/index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarColor01"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor01">
+        <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">Plot</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/max_temp.html">Max
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/max_temp.html">Max
                             Temperature</a>
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/humidity.html">Humidity</a>
                         <a class="dropdown-item"
-                            href="/Web Visualizations/Visualizations/cloudiness.html">Cloudiness</a>
-                        <a class="dropdown-item" href="/Web Visualizations/Visualizations/windspeed.html">Wind Speed</a>
+                            href="/Web_Visualizations/Visualizations/cloudiness.html">Cloudiness</a>
+                        <a class="dropdown-item" href="/Web_Visualizations/Visualizations/windspeed.html">Wind Speed</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Web Visualizations/comparison.html">Comparison</a>
+                    <a class="nav-link" href="/Web_Visualizations/comparison.html">Comparison</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Web Visualizations/data.html">Data</a>
+                    <a class="nav-link" href="/Web_Visualizations/data.html">Data</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <!--End Navbar-->
+
     <!-- Section to hold images -->
 
-    <!-- Summary of image  -->
     <div class="row background">
         <div class="col-md-4 col-lg-8 card-padding">
             <div class="section">
-                <h3><b>Humidity</b></h3>
-                <hr />
-                <img class="img-top" src="/Web Visualizations/Resources/assets/images/Fig2.png" alt="Humidity" />
                 <div class="section-body">
-                    <p class="section-text">
-                        Polar regions have lower humidity and as latitude gets higher, humidity gets higher in southern
-                        hemisphere.
-                    </p>
+                    <h2><b>Summary: Latitude vs. X</b></h2>
+                    <hr />
+
+                    <img class="image-sum" src="./Resources/assets/images/Fig1.png" alt="Max Temperature" />
+                    <span>
+                        <p>
+                            The purpose of this project was to analyze how weather changes as you get closer to the
+                            equator.
+                            To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a
+                            dataset on over 500 cities.
+                        </p>
+                        <p>
+                            After assembling this dataset, we used Matplotlib to plot various aspects of the weather vs.
+                            latitude.
+                            Factors we looked at included: temperature, cloudiness, wind speed, and humidity. The site
+                            provides the source data and visualizations created as part of the analysis, as well as
+                            explanation and descriptions of any trends and correlations witnessed.
+                        </p>
+                    </span>
                 </div>
             </div>
         </div>
-
-        <!-- Create card to hold images -->
+        <!-- End of summary project  -->
 
         <!-- Create card to hold vizualization images -->
         <div class="col-md-2 col-lg-4 card-padding">
-            <div class="card">
-                <h4><b>Visualizations</b></h4>
+            <div class="section">
+                <h2><b>Visualizations</b></h2>
                 <hr />
                 <div class="row">
                     <div class="col-sm-3 col-md-6">
-                        <a href="/Web Visualizations/Visualizations/max_temp.html">
-                            <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig1.png"
+                        <a href="/Web_Visualizations/Visualizations/max_temp.html">
+                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig1.png"
                                 alt="Max Temperature" />
                         </a>
                     </div>
                     <div class="col-sm-3 col-md-6">
-                        <a href="/Web Visualizations/Visualizations/humidity.html">
-                            <img class="img-fluid img-viz" src="/Web Visualizations/Resources/assets/images/Fig2.png"
+                        <a href="/Web_Visualizations/Visualizations/humidity.html">
+                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig2.png"
                                 alt="Humidity" />
                         </a>
                     </div>
                     <div class="col-sm-3 col-md-6">
-                        <a href="/Web Visualizations/Visualizations/cloudiness.html">
-                            <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig3.png"
+                        <a href="/Web_Visualizations/Visualizations/cloudiness.html">
+                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig3.png"
                                 alt="Cloudiness" />
                         </a>
                     </div>
 
                     <div class="col-sm-3 col-md-6">
-                        <a href="/Web Visualizations/Visualizations/windspeed.html">
-                            <img class="img-fluid" src="/Web Visualizations/Resources/assets/images/Fig4.png"
+                        <a href="/Web_Visualizations/Visualizations/windspeed.html">
+                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig4.png"
                                 alt="Wind Speed" />
                         </a>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
+
+
+
 </body>
 
 <footer>
