Data table file updated

--- a/Web_Visualizations/comparison.html
+++ b/Web_Visualizations/comparison.html
@@ -82,24 +82,21 @@
                     <div class="col-sm-3 col-md-5 com-img">
                         <h4><b>vs. Humidity</b></h4>
                         <a href="/Web_Visualizations/Visualizations/humidity.html">
-                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig2.png"
-                                alt="Humidity" />
+                            <img class="img-fluid" src="./Resources/assets/images/Fig2.png" alt="Humidity" />
                         </a>
                     </div>
 
                     <div class="col-sm-3 col-md-5 com-img">
                         <h4><b>vs. Cloudiness</b></h4>
                         <a href="/Web_Visualizations/Visualizations/cloudiness.html">
-                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig3.png"
-                                alt="Cloudiness" />
+                            <img class="img-fluid" src="./Resources/assets/images/Fig3.png" alt="Cloudiness" />
                         </a>
                     </div>
 
                     <div class="col-sm-3 col-md-5 com-img">
                         <h4><b>vs. Wind Speed</b></h4>
                         <a href="/Web_Visualizations/Visualizations/windspeed.html">
-                            <img class="img-fluid" src="/Web_Visualizations/Resources/assets/images/Fig4.png"
-                                alt="Wind Speed" />
+                            <img class="img-fluid" src="./Resources/assets/images/Fig4.png" alt="Wind Speed" />
                         </a>
                     </div>
                 </div>
